# bakery-ecommerce

./: .env.local  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 623f8d4ed580_create_product_table.py  6dba110440f9_create_image_table.py  9040d03d6539_create_private_key_session_table.py  92342cf042e7_create_carts_and_cart_items_tables.py  ae401e82ba50_create_user_table.py  b9282f9755d2_create_catalog_table_and_catalog_item_.py  e87dd7d8b8e6_create_front_page_table.py  ee8ddc35d5bc_create_order_table.py  f8eca279b05e_create_inventory_product_table.py
src/bakery_ecommerce/: app.py  composable.py  composable_test.py  context_bus.py  context_bus_test.py  dependencies.py  nats_subjects.py  object_store.py  token_middleware.py  utils.py
src/bakery_ecommerce/api_v1/: __init__.py  cart.py  catalog.py  front_page.py  identity.py  image.py  order.py  payment.py  product.py  user.py
src/bakery_ecommerce/internal/: inventory.py  product.py  product_events.py  some_service.py  user.py
src/bakery_ecommerce/worker/: __init__.py  image.py  stripe.py
src/bakery_lib/: pyproject.toml
web/: load-context.ts  package-lock.json  package.json  server.js  vite.config.ts  worker-configuration.d.ts  wrangler.toml
web/app/: entry.client.tsx  entry.server.tsx  root.tsx  session.server.ts
web/app/components/: catalog.card.tsx  product.card.tsx  upload.tsx
web/app/hooks/: useAuthFetch.ts  useCart.ts  useModel.ts  useResponsive.ts
web/app/lib/: debounce.ts  resize.ts
web/app/routes/: _index.tsx  admin._index.tsx  admin.catalogs-create.tsx  admin.catalogs.$id.tsx  admin.catalogs._index.tsx  admin.frontpage._index.tsx  admin.orders._index.tsx  admin.products-create.tsx  admin.products.$id.tsx  admin.products._index.tsx  admin.tsx  cart._index.tsx  checkout._index.tsx  login.tsx  orders._index.tsx  (+2 more)
(+48 files in other folders)
