[tool.poetry]
name = "bakery-ecommerce"
version = "0.1.0"
description = ""
authors = ["romashorodok <108732029+romashorodok@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bakery_ecommerce", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
bakery_lib = { path = "./src/bakery_lib", develop = false }
asyncpg = "^0.29.0"
joserfc = "^1.0.0"
bcrypt = "^4.2.0"
nats-py = "^2.8.0"
stripe = "^10.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
bakery_lib = { path = "./src/bakery_lib", develop = true }
alembic = "^1.13.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
